from __future__ import annotations

import enum
from datetime import date, datetime
from decimal import Decimal
from typing import Any

from sqlalchemy import JSON, Date, DateTime, Enum, Float, ForeignKey, Numeric, String, Text, func
from sqlalchemy.orm import Mapped, mapped_column, relationship

from database import Base


class CargoType(str, enum.Enum):
    general = "general"
    fragile = "fragile"
    dangerous = "dangerous"
    perishable = "perishable"
    oversized = "oversized"


class TransportMode(str, enum.Enum):
    air = "air"
    sea = "sea"
    road = "road"
    rail = "rail"


class ShipmentStatus(str, enum.Enum):
    pending = "pending"
    in_transit = "in_transit"
    customs_hold = "customs_hold"
    delivered = "delivered"
    delayed = "delayed"
    cancelled = "cancelled"


class Shipment(Base):
    __tablename__ = "shipments"

    id: Mapped[int] = mapped_column(primary_key=True, autoincrement=True)
    owner_id: Mapped[int] = mapped_column(ForeignKey("users.id", ondelete="CASCADE"), index=True)
    # Importer-owned shipment: linked exporter may upload invoice / CoO / packing list.
    exporter_user_id: Mapped[int | None] = mapped_column(
        ForeignKey("users.id", ondelete="SET NULL"),
        nullable=True,
        index=True,
    )
    reference: Mapped[str] = mapped_column(String(50), unique=True, nullable=False)
    origin: Mapped[str] = mapped_column(String(200), nullable=False, default="")
    destination: Mapped[str] = mapped_column(String(200), nullable=False, default="")
    cargo_type: Mapped[CargoType] = mapped_column(
        Enum(CargoType, values_callable=lambda obj: [e.value for e in obj], native_enum=False),
        nullable=False,
        default=CargoType.general,
    )
    transport_mode: Mapped[TransportMode] = mapped_column(
        Enum(TransportMode, values_callable=lambda obj: [e.value for e in obj], native_enum=False),
        nullable=False,
        default=TransportMode.sea,
    )
    status: Mapped[ShipmentStatus] = mapped_column(
        Enum(ShipmentStatus, values_callable=lambda obj: [e.value for e in obj], native_enum=False),
        nullable=False,
        default=ShipmentStatus.pending,
    )
    weight_kg: Mapped[Decimal | None] = mapped_column(Numeric(10, 2), nullable=True)
    volume_m3: Mapped[Decimal | None] = mapped_column(Numeric(10, 3), nullable=True)
    estimated_value: Mapped[Decimal | None] = mapped_column(Numeric(15, 2), nullable=True)
    currency: Mapped[str] = mapped_column(String(10), nullable=False, default="USD")
    freight_estimate_usd: Mapped[Decimal | None] = mapped_column(Numeric(15, 2), nullable=True)
    departure_date: Mapped[date | None] = mapped_column(Date, nullable=True)
    arrival_date: Mapped[date | None] = mapped_column(Date, nullable=True)
    vessel_name: Mapped[str | None] = mapped_column(String(200), nullable=True)
    voyage_number: Mapped[str | None] = mapped_column(String(100), nullable=True)
    eta_update: Mapped[date | None] = mapped_column(Date, nullable=True)
    notes: Mapped[str | None] = mapped_column(Text, nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now())
    updated_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), server_default=func.now(), onupdate=func.now()
    )

    # --- Simulated GPS tracking (optional until initialized) ---
    origin_lat: Mapped[float | None] = mapped_column(Float, nullable=True)
    origin_lng: Mapped[float | None] = mapped_column(Float, nullable=True)
    dest_lat: Mapped[float | None] = mapped_column(Float, nullable=True)
    dest_lng: Mapped[float | None] = mapped_column(Float, nullable=True)
    current_lat: Mapped[float | None] = mapped_column(Float, nullable=True)
    current_lng: Mapped[float | None] = mapped_column(Float, nullable=True)
    tracking_status: Mapped[str] = mapped_column(String(32), nullable=False, default="pending")
    tracking_progress: Mapped[float] = mapped_column(Float, nullable=False, default=0.0)
    location_history: Mapped[list[dict[str, Any]] | None] = mapped_column(JSON, nullable=True)
    estimated_delivery_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
    simulation_state: Mapped[str] = mapped_column(String(20), nullable=False, default="idle")

    owner: Mapped["User"] = relationship(
        foreign_keys=[owner_id],
        back_populates="shipments",
    )
    exporter: Mapped["User | None"] = relationship(
        "User",
        foreign_keys=[exporter_user_id],
        back_populates="export_shipments",
    )
    documents: Mapped[list["Document"]] = relationship(
        back_populates="shipment",
        cascade="all, delete-orphan",
    )
    notifications: Mapped[list["Notification"]] = relationship(
        back_populates="shipment",
        foreign_keys="Notification.shipment_id",
    )
    message_threads: Mapped[list["MessageThread"]] = relationship(
        back_populates="shipment",
    )
    shipment_products: Mapped[list["ShipmentProduct"]] = relationship(
        back_populates="shipment",
        cascade="all, delete-orphan",
    )
